# basic-rag-engine

./: .gitignore  README.md  REFACTORING_GUIDE.md  database.db  pyproject.toml
alembic/: env.py
alembic/versions/: 5f425e8eb5d7_init_db.py
app/: main.py  mcp_server.py
app/core/: dependencies.py  schema.py  settings.py
app/router/: documents.py  search.py  uploads.py
app/tools/: documents.py  pdf_processor.py  rag.py
app/utils/: chromadb_client.py  embedding_function.py  openai.py
chroma_db/: chroma.sqlite3
