[project]
name = "basic-rag-engine"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chonkie>=1.6.4",
    "chromadb>=1.5.8",
    "fastapi>=0.136.0",
    "mcp[cli]>=1.27.0",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.10.2",
    "scalar-fastapi>=1.8.2",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.45.0",
]
